<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_coordinator_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_context">

    <android.support.v4.widget.NestedScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_xxlarge_112"
                android:background="@color/grey"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/padding_xxlarge_24"
                android:paddingTop="@dimen/padding_xxlarge_24">


                <LinearLayout
                    style="@style/panel_item"
                    android:layout_gravity="center"
                    android:layout_weight="1">

                    <TextView
                        style="@style/panel_sub_item"
                        android:text="5"
                        android:textSize="@dimen/font_xxlarge_24" />

                    <TextView
                        style="@style/panel_sub_item"
                        android:text="@string/panel_raiting"
                        android:textSize="@dimen/font_large_16" />
                </LinearLayout>

                <View
                    android:layout_width="@dimen/line_height"
                    android:layout_height="match_parent"
                    android:background="@color/grey_light" />

                <LinearLayout
                    style="@style/panel_item"
                    android:layout_gravity="center"
                    android:layout_weight="2">

                    <TextView
                        style="@style/panel_sub_item"
                        android:text="25000"
                        android:textSize="@dimen/font_xxlarge_24" />

                    <TextView
                        style="@style/panel_sub_item"
                        android:text="@string/panel_count_code_strings"
                        android:textSize="@dimen/font_large_16" />
                </LinearLayout>

                <View
                    android:layout_width="@dimen/line_height"
                    android:layout_height="match_parent"
                    android:background="@color/grey_light" />

                <LinearLayout
                    style="@style/panel_item"
                    android:layout_gravity="center"
                    android:layout_weight="1">

                    <TextView
                        style="@style/panel_sub_item"
                        android:text="5"
                        android:textSize="@dimen/font_xxlarge_24" />

                    <TextView
                        style="@style/panel_sub_item"
                        android:text="@string/panel_projects"
                        android:textSize="@dimen/font_large_16" />
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small_8"
                android:layout_marginTop="@dimen/spacing_small_8"
                android:orientation="horizontal">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_call_black_24dp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/size_big_72"
                    android:layout_marginEnd="@dimen/spacing_normal_16"
                    android:layout_marginLeft="@dimen/spacing_medium_32"
                    android:layout_marginRight="@dimen/spacing_normal_16"
                    android:layout_marginStart="@dimen/spacing_medium_32"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/et_phone"
                            style="@style/item_text_input_layout"
                            android:hint="@string/layout_text_mobile_phone"
                            android:inputType="phone"
                            android:text="+79027888883" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <ImageView
                    style="@style/icon.right"
                    android:src="@drawable/ic_phone_in_talk_black_24dp" />
            </LinearLayout>

            <View style="@style/gorizontal_delimeter" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small_8"
                android:layout_marginTop="@dimen/spacing_small_8"
                android:orientation="horizontal">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_email_black_24dp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/size_big_72"
                    android:layout_marginEnd="@dimen/spacing_normal_16"
                    android:layout_marginLeft="@dimen/spacing_medium_32"
                    android:layout_marginRight="@dimen/spacing_normal_16"
                    android:layout_marginStart="@dimen/spacing_medium_32"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/et_email"
                            style="@style/item_text_input_layout"
                            android:hint="@string/layout_text_e_mail"
                            android:inputType="textEmailAddress"
                            android:text="my_mail@mail.my" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <ImageView
                    style="@style/icon.right"
                    android:src="@drawable/ic_send_black_24dp" />
            </LinearLayout>

            <View style="@style/gorizontal_delimeter" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small_8"
                android:layout_marginTop="@dimen/spacing_small_8"
                android:orientation="horizontal">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/vk_circle" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/size_big_72"
                    android:layout_marginEnd="@dimen/spacing_normal_16"
                    android:layout_marginLeft="@dimen/spacing_medium_32"
                    android:layout_marginRight="@dimen/spacing_normal_16"
                    android:layout_marginStart="@dimen/spacing_medium_32"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/et_vk"
                            style="@style/item_text_input_layout"
                            android:hint="@string/layout_text_vk"
                            android:text="vk.com/novoselov_roman" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <ImageView
                    style="@style/icon.right"
                    android:src="@drawable/eye" />
            </LinearLayout>

            <View style="@style/gorizontal_delimeter" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small_8"
                android:layout_marginTop="@dimen/spacing_small_8"
                android:orientation="horizontal">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/github_circle" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/size_big_72"
                    android:layout_marginEnd="@dimen/spacing_normal_16"
                    android:layout_marginLeft="@dimen/spacing_medium_32"
                    android:layout_marginRight="@dimen/spacing_normal_16"
                    android:layout_marginStart="@dimen/spacing_medium_32"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/et_github"
                            style="@style/item_text_input_layout"
                            android:hint="@string/layout_text_repo"
                            android:text="https://github.com/RNOVOSELOV/DevIntensive" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <ImageView
                    style="@style/icon.right"
                    android:src="@drawable/eye" />
            </LinearLayout>

            <View style="@style/gorizontal_delimeter" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small_8"
                android:layout_marginTop="@dimen/spacing_small_8"
                android:orientation="horizontal">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/account_circle" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/spacing_normal_16"
                    android:layout_marginLeft="@dimen/spacing_medium_32"
                    android:layout_marginRight="@dimen/spacing_normal_16"
                    android:layout_marginStart="@dimen/spacing_medium_32"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_small_8">

                        <EditText
                            android:id="@+id/et_about"
                            style="@style/item_text_input_layout"
                            android:hint="@string/layout_text_about"
                            android:text="@string/about" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>